Update redirect HTML template to use server link for redirection

--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -6,8 +6,7 @@
 	<title>NEUST Portal Directory - Redirect</title>
 	<script>
 		setTimeout(function() {
-			// window.location.href = "{{ link }}";
-			console.log("Redirecting to {{ link }}");
+			window.location.href = "{{ server }}";
 		}, 3000);
 	</script>
 </head>
