--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -5,6 +5,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>NEUST Portal Directory - {{ dept }} Redirect</title>
 	<meta name="description" content="Redirect URL to the NEUST Portal of {{ dept }}.">
+
+	<meta property="og:url" content="https://{{ dept }}.neust-portal.link">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="NEUST Portal Directory - {{ dept }} Redirect">
+	<meta property="og:description" content="Redirect URL to the NEUST Portal of {{ dept }}.">
+	<meta property="og:image" content="https://{{ base_url }}/public/ograph.jpg">
+	
+	<meta name="twitter:card" content="summary_large_image">
+	<meta property="twitter:domain" content="{{ dept }}.neust-portal.link">
+	<meta property="twitter:url" content="https://{{ dept }}.neust-portal.link">
+	<meta name="twitter:title" content="NEUST Portal Directory - {{ dept }} Redirect">
+	<meta name="twitter:description" content="Redirect URL to the NEUST Portal of {{ dept }}.">
+	<meta name="twitter:image" content="https://{{ base_url }}/public/ograph.jpg">
 </head>
 <body>
 	Redirecting to {{ dept }}...
