Add ograph route for image serving and update error handling in templates

--- a/templates/no-redirect.html
+++ b/templates/no-redirect.html
@@ -10,14 +10,14 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="NEUST Portal Directory - Redirect Not Found">
 	<meta property="og:description" content="Redirect not found. Redirect URL to the main NEUST Portal Directory...">
-	<meta property="og:image" content="https://ograph.{{ base_url }}/public/ograph.jpg">
+	<meta property="og:image" content="https://ograph.{{ base_url }}/error">
 	
 	<meta name="twitter:card" content="summary_large_image">
 	<meta property="twitter:domain" content="{{ dept }}.neust-portal.link">
 	<meta property="twitter:url" content="https://{{ dept }}.neust-portal.link">
 	<meta name="twitter:title" content="NEUST Portal Directory - Redirect Not Found">
 	<meta name="twitter:description" content="Redirect not found. Redirect URL to the main NEUST Portal Directory...">
-	<meta name="twitter:image" content="https://ograph.{{ base_url }}/public/ograph.jpg">
+	<meta name="twitter:image" content="https://ograph.{{ base_url }}/error">
 </head>
 <body>
 	{{ dept }} not found. Redirecting to the main NEUST Portal Directory...
