--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -10,14 +10,14 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="NEUST Portal Directory - {{ dept }} Redirect">
 	<meta property="og:description" content="Redirect URL to the NEUST Portal of {{ dept }}.">
-	<meta property="og:image" content="https://ograph.{{ base_url }}/public/ograph.jpg">
+	<meta property="og:image" content="https://ograph.{{ base_url }}">
 	
 	<meta name="twitter:card" content="summary_large_image">
 	<meta property="twitter:domain" content="{{ dept }}.neust-portal.link">
 	<meta property="twitter:url" content="https://{{ dept }}.neust-portal.link">
 	<meta name="twitter:title" content="NEUST Portal Directory - {{ dept }} Redirect">
 	<meta name="twitter:description" content="Redirect URL to the NEUST Portal of {{ dept }}.">
-	<meta name="twitter:image" content="https://ograph.{{ base_url }}/public/ograph.jpg">
+	<meta name="twitter:image" content="https://ograph.{{ base_url }}">
 </head>
 <body>
 	Redirecting to {{ dept }}...
