Improve redirect messages for clarity in no-redirect and redirect templates

--- a/templates/no-redirect.html
+++ b/templates/no-redirect.html
@@ -20,7 +20,7 @@
 	<meta name="twitter:image" content="https://ograph.{{ base_url }}/error">
 </head>
 <body>
-	{{ dept }} not found. Redirecting to the main NEUST Portal Directory...
+	{{ dept }} Portal not found. Redirecting to the main NEUST Portal Directory...
 	<script>
 		setTimeout(() => {
 			window.location.replace("{{ url }}");
