--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -20,7 +20,7 @@
 	<meta name="twitter:image" content="https://ograph.{{ base_url }}/image">
 </head>
 <body>
-	Redirecting to {{ dept }}...
+	Redirecting to the NEUST Portal for {{ dept }}...
 	<script>
 		setTimeout(() => {
 			window.location.replace("{{ url }}");
